security and policies homework

--- a/04-Security-And-Policies/homework/consumer-deployment.yml
+++ b/04-Security-And-Policies/homework/consumer-deployment.yml
@@ -22,11 +22,6 @@ spec:
     spec:
       containers:
       - name: cons-container
-        image: shekeriev/k8s-facts-fe
+        image: shekeriev/k8s-consumer:latest
         ports:
         - containerPort: 5000
-        env:
-        - name: FACTS_SERVER
-          value: "factscip"
-        - name: FACTS_PORT
-          value: "5000"
