--- a/04-Security-And-Policies/homework/producer-svc.yml
+++ b/04-Security-And-Policies/homework/producer-svc.yml
@@ -1,16 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: consumer
+  name: producer
   labels:
     app: fun-facts
-    role: consumer
+    role: producer
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
   - port: 5000
-    nodePort: 30001
     protocol: TCP
   selector:
     app: fun-facts
-    role: consumer
+    role: producer
